[package]
name = "mtreconstruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
regex = "1"
getopts = "0.2"
env_logger = "0.10.0"
log = "0.4.0"

[profile.dev]
panic = 'abort'

[profile.release]
strip = true
#opt-level = "z"
#lto = true
#codegen-units = 1
panic = "abort"


